add pizza icon to title

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Tasty Meals</title>
+        <link rel="icon" href="favicon.ico" />
     </head>
     <body>
         <header>
