--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Tasty Meals</title>
+        <link rel="icon" href="pizza-icon.png" />
     </head>
     <body>
         <header>
@@ -11,9 +12,9 @@
                     <li><a href="about.html">ABOUT</a></li>
                 </menu>
             </nav>
+            <hr />
         </header>
         <main>
-
         </main>
         <footer>
             <hr />
