--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <hr />
         </header>
         <main>
+            <img alt = "pizza" width="500px" src="pizza-holder.png" alt="" />
         </main>
         <footer>
             <hr />
