--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
             <hr />
         </header>
         <main>
-            <img alt = "pizza" width="500px" src="pizza-holder.png" alt="" />
+            <div><img alt = "pizza" width="300px" src="pizza-holder.png" alt="" /></div>
+            <form method="get" action="post.html">
+                <div>
+                <span>EMAIL</span>
+                <input type="text" placeholder="name@email.com" />
+                </div>
+                <div>
+                <span>PASSWORD</span>
+                <input type="password" placeholder="password" />
+                </div>
+                <button type="submit">LOGIN</button>
+                <button type="submit">REGISTER</button>
+            </form>
         </main>
         <footer>
             <hr />
