put in about info

--- a/about.html
+++ b/about.html
@@ -12,9 +12,18 @@
                     <li><a href="index.html">LOGIN</a></li>
                 </menu>
             </nav>
+            <hr />
         </header>
         <main>
-
+            <h1>ABOUT</h1>
+            <p>
+                Are you sick of making the same meals all the time for dinner? 
+                Have you ever wondered what your friends or others are making? 
+                With Tasty Meals, not only will you be more organized in your meal planning 
+                but also you will be more inspired in your dinner choices. 
+                Use Tasty Meals to post about your meals 
+                and see what those around you are making for their tasty dinners!
+            </p>
         </main>
         <footer>
             <hr />
