update about description

--- a/about.html
+++ b/about.html
@@ -17,12 +17,17 @@
         <main>
             <h1>ABOUT</h1>
             <p>
-                Are you sick of making the same meals all the time for dinner? 
-                Have you ever wondered what your friends or others are making? 
-                With Tasty Meals, not only will you be more organized in your meal planning 
-                but also you will be more inspired in your dinner choices. 
-                Use Tasty Meals to post about your meals 
-                and see what those around you are making for their tasty dinners!
+                Tasty Meals is an app where you can post what you are planning on eating for dinner 
+                and see what your friends and others are eating as well!
+            </p>
+
+            <p>
+                You can also save other people's posts that you love, 
+                so that you can look back at your favorites for future
+                dinner plan inspiration!
+            </p>
+            <p> 
+                Hope you enjoy all of your future tasty meals!
             </p>
         </main>
         <footer>
