update about description again

--- a/about.html
+++ b/about.html
@@ -19,12 +19,8 @@
             <p>
                 Tasty Meals is an app where you can post what you are planning on eating for dinner 
                 and see what your friends and others are eating as well!
-            </p>
-
-            <p>
                 You can also save other people's posts that you love, 
-                so that you can look back at your favorites for future
-                dinner plan inspiration!
+                so that you can look back at your favorites for meal planning inspiration!
             </p>
             <p> 
                 Hope you enjoy all of your future tasty meals!
