--- a/post.html
+++ b/post.html
@@ -17,12 +17,12 @@
             <hr />
         </header>
         <main>
-            <form method="post">
-                <div>
+            <form method="get" action = post.html>
                 <span>What is your plan for dinner?</span>
-                <input type="text" placeholder="write here..." />
-                </div>
+                <div>
+                <input type="text" placeholder="Write here..." />
                 <button type="submit">POST</button>
+                </div>
             </form>              
         </main>
         <footer>
