--- a/post.html
+++ b/post.html
@@ -22,8 +22,90 @@
                 <div>
                 <input type="text" placeholder="Write here..." />
                 <button type="submit">POST</button>
-                </div>
-            </form>              
+                </div>  
+            </form> 
+            <h2>OTHERS:</h2>
+            <table>
+                <tr>
+                    <th>NAME</th>
+                    <th>PLANS</th>
+                    <th>LIKES</th>
+                    <th>ADD TO FAVORITES</th>
+                </tr>
+                    <tr>
+                    <td>Lily</td>
+                    <td>McDonalds!</td>
+                    <td>
+                        <div>
+                            <button>
+                                <svg width="15" height="15" viewBox="0 0 120 110" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M60 100
+                                    C60 100, 10 70, 10 35
+                                    C10 15, 30 5, 45 20
+                                    C55 30, 60 40, 60 40
+                                    C60 40, 65 30, 75 20
+                                    C90 5, 110 15, 110 35
+                                    C110 70, 60 100, 60 100 Z"
+                                    fill="pink"/>
+                                </svg>
+                            </button>
+                            4
+                        </div>
+                    </td>
+                    <td>
+                        <button>+</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Danny</td>
+                    <td>I'm making spaghetti</td>
+                    <td>
+                        <button>
+                            <svg width="15" height="15" viewBox="0 0 120 110" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M60 100
+                                C60 100, 10 70, 10 35
+                                C10 15, 30 5, 45 20
+                                C55 30, 60 40, 60 40
+                                C60 40, 65 30, 75 20
+                                C90 5, 110 15, 110 35
+                                C110 70, 60 100, 60 100 Z"
+                                fill="pink"/>
+                            </svg>
+                        </button>
+                        2
+                    </td>
+                    <td>
+                        <button>+</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Spencer</td>
+                    <td>Trying Pancakes</td>
+                    <td>
+                        <div>
+                            <button>
+                                <svg width="15" height="15" viewBox="0 0 120 110" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M60 100
+                                    C60 100, 10 70, 10 35
+                                    C10 15, 30 5, 45 20
+                                    C55 30, 60 40, 60 40
+                                    C60 40, 65 30, 75 20
+                                    C90 5, 110 15, 110 35
+                                    C110 70, 60 100, 60 100 Z"
+                                    fill="pink"/>
+                                </svg>
+                            </button>
+                            10
+                        </div>
+                    </td>
+                    <td>
+                        <button>+</button>
+                    </td>
+                </tr>
+            </table>             
         </main>
         <footer>
             <hr />
