--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
             <nav>
                 <menu>
                     <li><a href="index.html">LOGIN</a></li>
+                    <li><a href="post.html">POST</a></li>
+                    <li><a href="favorites.html">FAVORITES</a></li>
                 </menu>
             </nav>
             <hr />
