--- a/favorites.html
+++ b/favorites.html
@@ -3,6 +3,7 @@
     <head>
         <title>Tasty Meals</title>
         <link rel="icon" href="pizza-icon.png" />
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <header>
