make some classes and id markers

--- a/favorites.html
+++ b/favorites.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-             <h1>TASTY MEALS</h1>
+             <h1 class="title">TASTY MEALS</h1>
             <nav>
                 <menu>
                     <li><a href="post.html">POST</a></li>
@@ -18,11 +18,11 @@
             <hr />
         </header>
         <main>
-            <h1>YOUR FAVORITES!</h1>
+            <h1 id="favorites">YOUR FAVORITES!</h1>
             <div>
                 <ul>
-                    <li>Nico: making fish tacos!</li>
-                    <li>Addie: I love a good rice bowl </li>
+                    <li><span class="name">Nico: </span>making fish tacos!</li>
+                    <li><span class="name">Addie: </span>I love a good rice bowl </li>
                 </ul>
             </div>
         </main>
