--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-             <h1>TASTY MEALS</h1>
+             <h1 class="title">TASTY MEALS</h1>
             <nav>
                 <menu>
                     <li><a href="index.html">LOGIN</a></li>
