include new files in individual pages

--- a/favorites.html
+++ b/favorites.html
@@ -4,6 +4,7 @@
         <title>Tasty Meals</title>
         <link rel="icon" href="pizza-icon.png" />
         <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="favorites.css" />
     </head>
     <body>
         <header>
