--- a/post.html
+++ b/post.html
@@ -4,6 +4,7 @@
         <title>Tasty Meals</title>
         <link rel="icon" href="pizza-icon.png" />
         <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="post.css" />
     </head>
     <body>
         <header>
