fix menu for each page to include every page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        
+
         <title>Tasty Meals</title>
         <link rel="icon" href="pizza-icon.png" />
 
@@ -14,6 +14,9 @@
             <h1 class="title">TASTY MEALS</h1>
             <nav>
                 <menu>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="post.html">POST</a></li>
+                    <li><a href="favorites.html">FAVORITES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                 </menu>
             </nav>
