--- a/about.html
+++ b/about.html
@@ -15,9 +15,10 @@
              <h1 class="title">TASTY MEALS</h1>
             <nav>
                 <menu>
-                    <li><a href="index.html">LOGIN</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="post.html">POST</a></li>
                     <li><a href="favorites.html">FAVORITES</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                 </menu>
             </nav>
             <hr />
