--- a/post.html
+++ b/post.html
@@ -15,8 +15,9 @@
              <h1 class="title">TASTY MEALS</h1>
             <nav>
                 <menu>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="post.html">POST</a></li>
                     <li><a href="favorites.html">FAVORITES</a></li>
-                    <li><a href="index.html">LOGOUT</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                 </menu>
             </nav>
