--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
             <hr />
         </header>
         <main>
-            <div><img alt = "pizza" width="200px" src="pizza-holder.jpg" /></div>
+            <div><img alt = "pizza" width = 300px src="pizza-holder.jpg" /></div>
             <form method="get" action="post.html">
                 <div>
+                <h1>Welcome!</h1>
+                <br />
                 <span>EMAIL</span>
                 <input type="text" placeholder="name@email.com" />
                 </div>
