--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
         </main>
         <footer>
             <hr />
-            <span>Emery Maxwell</span>
-            <br />
-            <a href="https://github.com/emerymaxwell8/startup.git">GitHub</a>
+            <div>
+                <span>Emery Maxwell</span>
+                <a href="https://github.com/emerymaxwell8/startup.git">GitHub</a>
+            </div>
         </footer>
     </body>
 
