--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         />
     </head>
     <body>
-        <header>
-            <h1 class="title">TASTY MEALS</h1>
-            <nav>
-                <menu>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="post.html">POST</a></li>
-                    <li><a href="favorites.html">FAVORITES</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
+        <header class="text-white">
+            <nav class="navbar fixed-top">
+                <h1 class="navbar-brand">TASTY MEALS</h1>
+                <menu class="navbar-nav">
+                    <li class="nav-item"><a class ="nav-link active" href="index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="post.html">POST</a></li>
+                    <li class="nav-item"><a class="nav-link" href="favorites.html">FAVORITES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
                 </menu>
             </nav>
         </header>
@@ -44,7 +44,7 @@
                 <button type="submit">REGISTER</button>
             </form>
         </main>
-        <footer>
+        <footer class = 'text-white'>
             <div>
                 <span>Emery Maxwell</span>
                 <a href="https://github.com/emerymaxwell8/startup.git">GitHub</a>
