--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         />
     </head>
     <body>
-        <header class="text-white">
+        <header>
             <nav class="navbar fixed-top">
-                <h1 class="navbar-brand">TASTY MEALS</h1>
+                <h1 class="navbar-brand fs-2 text-white">TASTY MEALS</h1>
                 <menu class="navbar-nav">
                     <li class="nav-item"><a class ="nav-link active" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="post.html">POST</a></li>
