--- a/index.html
+++ b/index.html
@@ -30,19 +30,21 @@
         </header>
         <main>
             <div><img alt = "pizza" width = 300px src="pizza-holder.jpg" /></div>
-            <form method="get" action="post.html">
-                <div>
-                <h1>Welcome!</h1>
-                <span>EMAIL</span>
-                <input type="text" placeholder="name@email.com" />
-                </div>
-                <div>
-                <span>PASSWORD</span>
-                <input type="password" placeholder="password" />
-                </div>
-                <button type="submit">LOGIN</button>
-                <button type="submit">REGISTER</button>
-            </form>
+            <div>
+                <h1><strong>Welcome!</strong></h1>
+                <form method="get" action="post.html">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">EMAIL</span>
+                        <input class="form-control" type="text" placeholder="name@email.com" />
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">PASSWORD</span>
+                        <input class="form-control" type="password" placeholder="password" />
+                    </div>
+                    <button type="submit" class ="btn btn-dark">LOGIN</button>
+                    <button type="submit" class ="btn btn-dark">REGISTER</button>
+                </form>
+            </div>
         </main>
         <footer class = 'text-white'>
             <div>
