--- a/post.html
+++ b/post.html
@@ -19,16 +19,15 @@
     </head>
     <body>
         <header>
-             <h1 class="title">TASTY MEALS</h1>
-            <nav>
-                <menu>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="post.html">POST</a></li>
-                    <li><a href="favorites.html">FAVORITES</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
+            <nav class="navbar fixed-top">
+                <h1 class="navbar-brand fs-2 text-white">TASTY MEALS</h1>
+                <menu class="navbar-nav">
+                    <li class="nav-item"><a class ="nav-link" href="index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="post.html">POST</a></li>
+                    <li class="nav-item"><a class="nav-link" href="favorites.html">FAVORITES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
                 </menu>
             </nav>
-            <hr />
         </header>
         <main>
             <div id="yourName">
