--- a/about.html
+++ b/about.html
@@ -43,10 +43,8 @@
             <div> <img width="200px" src="burger-holder.jpg" alt="burger" /></div>
             <div> <img width="200px" src="pasta-holder.jpg" alt="pasta" /></div>
         </main>
-        <footer>
-            <hr />
+        <footer class = 'text-white'>
             <span>Emery Maxwell</span>
-            <br />
             <a href="https://github.com/emerymaxwell8/startup.git">GitHub</a>
         </footer>
     </body>
