--- a/post.html
+++ b/post.html
@@ -122,10 +122,8 @@
                 </tr>
             </table>             
         </main>
-        <footer>
-            <hr />
+        <footer class = 'text-white'>
             <span>Emery Maxwell</span>
-            <br />
             <a href="https://github.com/emerymaxwell8/startup.git">GitHub</a>
         </footer>
     </body>
