--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <header>
-            <nav class="navbar fixed-top">
+            <nav class="navbar">
                 <h1 class="navbar-brand fs-2 text-white">TASTY MEALS</h1>
                 <menu class="navbar-nav">
                     <li class="nav-item"><a class ="nav-link active" href="index.html">HOME</a></li>
