--- a/post.html
+++ b/post.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <header>
-            <nav class="navbar fixed-top">
+            <nav class="navbar">
                 <h1 class="navbar-brand fs-2 text-white">TASTY MEALS</h1>
                 <menu class="navbar-nav">
                     <li class="nav-item"><a class ="nav-link" href="index.html">HOME</a></li>
