--- a/favorites.html
+++ b/favorites.html
@@ -30,12 +30,26 @@
             </nav>
         </header>
         <main>
-            <h1 id="favorites">YOUR FAVORITES!</h1>
+            <h1 id="favorites"> <strong>YOUR FAVORITES!</strong></h1>
             <div>
-                <ul>
-                    <li><span class="name">Nico: </span>making fish tacos!</li>
-                    <li><span class="name">Addie: </span>I love a good rice bowl </li>
-                </ul>
+                <table class="table table-primary table-striped-columns">
+                    <thead>
+                        <tr>
+                            <th>NAME</th>
+                            <th>DINNER PLAN</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Nico</td>
+                            <td>making fish tacos!</td>
+                        </tr>
+                        <tr>
+                            <td>Addie</td>
+                            <td>I love a good rice bowl</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </main>
         <footer class = 'text-white'>
