--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
             <p> 
                 Hope you enjoy all of your future tasty meals!
             </p>
-            <div> <img width="200px" src="burger-holder.jpg" alt="burger" /></div>
-            <div> <img width="200px" src="pasta-holder.jpg" alt="pasta" /></div>
+            <div> <img class="picture" width="200px" src="burger-holder.jpg" alt="burger" /></div>
+            <div> <img class="picture" width="200px" src="pasta-holder.jpg" alt="pasta" /></div>
         </main>
         <footer class = 'text-white'>
             <span>Emery Maxwell</span>
