--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
         </header>
         <main>
-            <div><img alt = "pizza" width = 300px src="pizza-holder.jpg" /></div>
+            <div><img class="picture" alt = "pizza" width = 300px src="pizza-holder.jpg" /></div>
             <div>
                 <h1><strong>Welcome!</strong></h1>
                 <form method="get" action="post.html">
