--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </menu>
             </nav>
         </header>
-        <main>
+        <main class="row-main">
             <div><img class="picture" alt = "pizza" width = 300px src="pizza-holder.jpg" /></div>
             <div>
                 <h1><strong>Welcome!</strong></h1>
