add background and change text color of p

--- a/about.html
+++ b/about.html
@@ -29,15 +29,14 @@
                 </menu>
             </nav>
         </header>
-        <main>
-            <h1>ABOUT</h1>
-            <p>
+        <main class="text-center">
+            <h1 class="title">ABOUT</h1>
+            <p class="text-white">
                 Tasty Meals is an app where you can post what you are planning on eating for dinner 
                 and see what your friends and others are eating as well!
                 You can also save other people's posts that you love, 
                 so that you can look back at your favorites for meal planning inspiration!
-            </p>
-            <p> 
+
                 Hope you enjoy all of your future tasty meals!
             </p>
             <div> <img class="picture" width="200px" src="burger-holder.jpg" alt="burger" /></div>
