--- a/favorites.html
+++ b/favorites.html
@@ -30,7 +30,7 @@
             </nav>
         </header>
         <main>
-            <h1 id="favorites"> <strong>YOUR FAVORITES!</strong></h1>
+            <h1 class="title"> YOUR FAVORITES!</h1>
             <div>
                 <table class="table table-primary table-striped-columns">
                     <thead>
