fix positions of pictures

--- a/about.html
+++ b/about.html
@@ -39,8 +39,10 @@
 
                 Hope you enjoy all of your future tasty meals!
             </p>
-            <div> <img class="picture" width="200px" src="burger-holder.jpg" alt="burger" /></div>
-            <div> <img class="picture" width="200px" src="pasta-holder.jpg" alt="pasta" /></div>
+            <div class = "picture-section"> 
+                <img class="picture" width="200px" src="burger-holder.jpg" alt="burger" />
+                <img class="picture" width="200px" src="pasta-holder.jpg" alt="pasta" />
+            </div>
         </main>
         <footer class = 'text-white'>
             <span>Emery Maxwell</span>
