fix animation to just be home title

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <main class="row-main">
             <div><img class="picture" alt = "pizza" width = 300px src="pizza-holder.jpg" /></div>
             <div>
-                <h1 class="title">Welcome!</h1>
+                <h1 id='title-main' class="title">Welcome!</h1>
                 <form method="get" action="post.html">
                     <div class="input-group mb-3">
                         <span class="input-group-text">EMAIL</span>
