--- a/post.html
+++ b/post.html
@@ -36,7 +36,7 @@
             
             <form method="get" action = post.html>
                 <div class = "user-post input-group mb-1 align-items-center gap-3">
-                    <span class="input-group-text">What is your plan for dinner?</span>
+                    <span class="input-group-text">Plan for dinner?</span>
                     <input id = 'prompt' class="form-control" type="text" placeholder="Write here..." />
                     <button type="submit" class="btn btn-dark">POST</button>
                 </div>
